Fixed project images showing behind navigation when scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 .containerNavTop {
+  z-index: 20;
   position: fixed;
   top: 0;
   width: 90%;
@@ -120,7 +121,8 @@
     margin: 10px; }
     @media only screen and (max-width: 767px) {
       .containerProjects .projectsFlexContainer .projectContainer .projectAnchor {
-        opacity: 0.25 !important; } }
+        opacity: 0.25 !important;
+        z-index: 10; } }
     .containerProjects .projectsFlexContainer .projectContainer #optimizeText {
       padding-left: 20px; }
     .containerProjects .projectsFlexContainer .projectContainer .projectCaption {
@@ -134,7 +136,8 @@
       bottom: 0px; }
       @media only screen and (max-width: 767px) {
         .containerProjects .projectsFlexContainer .projectContainer .projectCaption {
-          display: block !important; } }
+          display: block !important;
+          z-index: 10; } }
     .containerProjects .projectsFlexContainer .projectContainer .projectCapture {
       margin: 0 auto;
       width: 200px;
